--- a/src/css/style.css
+++ b/src/css/style.css
@@ -581,6 +581,11 @@
   display: inline;
 }
 
+.mouse-table {
+  background-image: url(../assets/abstract.jpg);
+  background-size: 100%;
+}
+
 .mouse-panel {
   margin-top: 20px;
   margin-right: -8px;
@@ -590,8 +595,6 @@
   height: 170px;
 }
 .mouse-panel .mouse-table {
-  background-image: url(../assets/abstract.jpg);
-  background-size: 100% auto;
   border: 2px grey;
   border-style: solid solid none solid;
   border-radius: 30px 30px 0px 0px;
