--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -18,6 +18,10 @@
   border-color: $colorGreen;
 }
 
+p {
+  font-size: 9pt;
+}
+
 .wrapper {
   background-image: url(../assets/picture.jpg);
   background-size: 100% auto;
