--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -7,6 +7,7 @@
   box-sizing: border-box;
   color: $colorWhite;
   font-family: "Times New Roman", Times, serif;
+  font-size: 9pt;
 }
 
 .action {
@@ -16,10 +17,6 @@
 #activeBtnEnter {
   background-color: $colorGreen;
   border-color: $colorGreen;
-}
-
-p {
-  font-size: 9pt;
 }
 
 .wrapper {
@@ -231,10 +228,6 @@ p {
   margin-top: 2px;
   width: 516px;
   height: 35px;
-
-  p {
-    font-size: 9pt;
-  }
 }
 
 .blockNumbers__btnClassStd {
@@ -622,13 +615,7 @@ div[class^="note"] {
   border-radius: 3px;
   width: 170px;
   height: 220px;
-  padding: 0px 10px;
-
-  & > span {
-    position: relative;
-    top: 190px;
-    left: 135px;
-  }
+  padding: 10px 10px;
 
   & > p {
     color: $colorGrey;
@@ -644,13 +631,14 @@ div[class^="note"] {
 
   &[class$="2"] {
     top: 120px;
-    background-color: rgb(233, 137, 12);
+    background-color: rgb(14, 232, 248);
   }
 
   &[class$="3"] {
     left: -30px;
     transform: rotate(-25deg);
-    background-color: rgb(14, 232, 248);
+
+    background-color: rgb(233, 137, 12);
   }
 
   &[class$="4"] {
@@ -658,5 +646,37 @@ div[class^="note"] {
     left: -80px;
     transform: rotate(35deg);
     background-color: rgb(55, 231, 39);
+  }
+
+  .image_1 {
+    position: absolute;
+    width: 51px;
+    height: 63px;
+    top: 150px;
+    left: 60px;
+  }
+
+  .image_2 {
+    position: absolute;
+    width: 68px;
+    height: 63px;
+    top: 150px;
+    left: 50px;
+  }
+
+  .image_3 {
+    position: absolute;
+    width: 51px;
+    height: 63px;
+    top: 150px;
+    left: 50px;
+  }
+
+  .image_4 {
+    position: absolute;
+    width: 51px;
+    height: 63px;
+    top: 150px;
+    left: 50px;
   }
 }
