--- a/src/css/style.css
+++ b/src/css/style.css
@@ -26,7 +26,8 @@
   height: 1080px;
 }
 
-.computer {
+.wrapper_game_computer {
+  display: flex;
   grid-column: 1;
 }
 
@@ -35,8 +36,7 @@
   background-color: #000;
   border: 2px solid rgb(30, 192, 130);
   border-radius: 30px;
-  margin-top: 10px;
-  margin-left: 400px;
+  margin: 10px 0px 0px;
   padding: 10px 10px 10px;
   width: 700px;
   height: 300px;
@@ -66,7 +66,6 @@
   box-shadow: 0 0 15px 5px rgb(146, 140, 140);
   border-radius: 30px;
   margin-top: 0px;
-  margin-left: 400px;
   width: 700px;
   height: 300px;
   cursor: pointer;
