--- a/src/css/game.css
+++ b/src/css/game.css
@@ -1,21 +1,7 @@
-ol,
-ul {
-  padding-left: 30px;
-}
-
-h1 {
-  font-size: 15pt;
-  margin: 15px auto 10px;
-}
-
 .board-row:after {
   clear: both;
   content: "";
   display: table;
-}
-
-.status {
-  margin-bottom: 10px;
 }
 
 .square {
@@ -34,10 +20,6 @@ h1 {
   color: rgb(0, 0, 0);
 }
 
-.square:focus {
-  outline: none;
-}
-
 .winner {
   background-color: #ffff00;
 }
@@ -46,14 +28,18 @@ h1 {
   background-color: rgb(10, 162, 233);
 }
 
-.kbd-navigation .square:focus {
-  background: #ddd;
-}
-
 .game {
   display: flex;
   flex-direction: column;
   width: 450px;
+}
+.game > h1 {
+  font-size: 15pt;
+  margin: 15px auto 10px;
+}
+.game > h2 {
+  font-size: 10pt;
+  margin: 0px auto 10px;
 }
 
 .game-board {
@@ -103,16 +89,8 @@ h1 {
   text-align: center;
 }
 
-.block {
-  margin-top: 20px;
-}
-
-.context-button {
-  margin-bottom: 10px;
-}
-
-.example-state {
-  margin: 5px;
+.start-game-hidden {
+  opacity: 0;
 }
 
 table {
@@ -136,4 +114,4 @@ td > a {
 #sortUp > g,
 #sortDown > g {
   fill: #0ee8f8;
-} /*# sourceMappingURL=game.css.map */
+}/*# sourceMappingURL=game.css.map */
