--- a/src/css/style.css
+++ b/src/css/style.css
@@ -612,6 +612,7 @@
   width: 800px;
   height: 350px;
   grid-column: 2;
+  grid-row: 1;
 }
 
 div[class^=note] {
@@ -624,7 +625,6 @@ div[class^=note] {
 }
 div[class^=note] > p {
   color: rgb(82, 82, 82);
-  font-size: 10pt;
 }
 div[class^=note][class$="1"] {
   top: 20px;
@@ -674,4 +674,28 @@ div[class^=note] .image_4 {
   height: 63px;
   top: 150px;
   left: 50px;
+}
+
+.wrapper_menu {
+  grid-column: 1;
+  grid-row: 2;
+  position: relative;
+  border-radius: 5px;
+  box-shadow: 0px 0px 15px 5px black;
+  top: 330px;
+  left: 50px;
+  width: 310px;
+  height: 350px;
+  background-color: rgb(189, 103, 117);
+}
+.wrapper_menu > ul {
+  margin: 20px 10px 0px 25px;
+}
+.wrapper_menu > ul > li {
+  color: black;
+  font-size: 14pt;
+  text-align: justify;
+  padding: 5px;
+  list-style-type: square;
+  cursor: pointer;
 }/*# sourceMappingURL=style.css.map */
