--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -606,6 +606,7 @@
   width: 800px;
   height: 350px;
   grid-column: 2;
+  grid-row: 1;
 }
 
 div[class^="note"] {
@@ -618,7 +619,6 @@ div[class^="note"] {
 
   & > p {
     color: $colorGrey;
-    font-size: 10pt;
   }
 
   &[class$="1"] {
@@ -677,5 +677,30 @@ div[class^="note"] {
     height: 63px;
     top: 150px;
     left: 50px;
+  }
+}
+
+.wrapper_menu {
+  grid-column: 1;
+  grid-row: 2;
+  position: relative;
+  border-radius: 5px;
+  box-shadow: 0px 0px 15px 5px black;
+  top: 330px;
+  left: 50px;
+  width: 310px;
+  height: 350px;
+  background-color: rgb(189, 103, 117);
+
+  & > ul {
+    margin: 20px 10px 0px 25px;
+    & > li {
+      color: black;
+      font-size: 14pt;
+      text-align: justify;
+      padding: 5px;
+      list-style-type: square;
+      cursor: pointer;
+    }
   }
 }
