--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -43,23 +43,101 @@
   padding: 10px 10px 10px;
   width: 700px;
   height: 300px;
+}
 
-  & > textarea {
-    border: 2px solid $colorGreen;
-    border-radius: 20px;
+.display_background {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-size: 680px 276px;
+  border: 2px solid $colorGreen;
+  border-radius: 20px;
+  color: $colorBlack;
+  border-color: $colorGrey;
+  font-size: 16pt;
+  width: 680px;
+  height: 276px;
+
+  & > input {
+    border: 2px solid $colorGrey2;
+    border-radius: 7px;
     color: $colorBlack;
-    caret-color: $colorGrey;
-    font-size: 16pt;
-    width: 680px;
-    height: 276px;
+    margin-right: 5px;
+    font-size: 14pt;
+    width: 250px;
+    height: 30px;
 
     &:hover {
-      box-shadow: 0 0 5px 5px $colorGrey2;
+      box-shadow: 0 0 2px 2px $colorGrey2;
     }
 
     &:focus {
       outline: none;
     }
+  }
+
+  & > button {
+    border: 2px solid $colorGrey2;
+    background-color: rgb(203, 228, 215);
+    font-weight: 500;
+    border-radius: 7px;
+    color: $colorBlack;
+    font-size: 12pt;
+    width: 80px;
+    height: 30px;
+
+    &:hover {
+      box-shadow: 0 0 2px 2px $colorGrey2;
+    }
+  }
+}
+
+.miniImage {
+  width: 104px;
+  height: 78px;
+  margin: 7px;
+  border: 2px solid $colorGrey2;
+  border-radius: 7px;
+  background-size: auto 78px;
+  cursor: pointer;
+}
+
+.displayImage_0 {
+  background-image: url(../assets/display_background/derevia_gory_les.jpg);
+}
+
+.displayImage_1 {
+  background-image: url(../assets/display_background/dom_derevia_sneg.jpg);
+}
+
+.displayImage_2 {
+  background-image: url(../assets/display_background/izgorod_pole_derevia.jpg);
+}
+
+.displayImage_3 {
+  background-image: url(../assets/display_background/more_kamni_tuman.jpg);
+}
+
+.menu_modalDisplayBg {
+  position: absolute;
+  top: 100px;
+  left: 270px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid $colorGrey2;
+  border-radius: 7px;
+  width: 500px;
+  height: 100px;
+  background-color: rgb(93, 182, 130);
+
+  & > span {
+    position: absolute;
+    top: -3px;
+    right: 5px;
+    color: black;
+    font-size: 14pt;
+    cursor: pointer;
   }
 }
 
@@ -649,10 +727,10 @@ div[class^="note"] {
 
   .image_1 {
     position: absolute;
-    width: 51px;
-    height: 63px;
-    top: 150px;
-    left: 60px;
+    width: 70px;
+    height: 70px;
+    top: 140px;
+    left: 45px;
   }
 
   .image_2 {
@@ -667,7 +745,7 @@ div[class^="note"] {
     position: absolute;
     width: 51px;
     height: 63px;
-    top: 150px;
+    top: 140px;
     left: 50px;
   }
 
@@ -692,8 +770,14 @@ div[class^="note"] {
   height: 350px;
   background-color: rgb(189, 103, 117);
 
+  & > p {
+    margin: 10px 120px;
+    font-size: 20pt;
+    color: black;
+  }
+
   & > ul {
-    margin: 20px 10px 0px 25px;
+    margin: 10px 10px 0px 25px;
     & > li {
       color: black;
       font-size: 14pt;
