--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,6 +16,18 @@
   border-color: rgb(30, 192, 130);
 }
 
+.suspense > h1 {
+  color: black;
+}
+
+#error-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
 .wrapper {
   background-image: url(../assets/picture.jpg);
   background-size: 100% auto;
@@ -84,16 +96,6 @@
   box-shadow: 0 0 2px 2px rgb(146, 140, 140);
 }
 
-.miniImage {
-  width: 104px;
-  height: 78px;
-  margin: 7px;
-  border: 2px solid rgb(146, 140, 140);
-  border-radius: 7px;
-  background-size: auto 78px;
-  cursor: pointer;
-}
-
 .displayImage_0 {
   background-image: url(../assets/display_background/derevia_gory_les.jpg);
 }
@@ -108,28 +110,6 @@
 
 .displayImage_3 {
   background-image: url(../assets/display_background/more_kamni_tuman.jpg);
-}
-
-.menu_modalDisplayBg {
-  position: absolute;
-  top: 100px;
-  left: 270px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: 2px solid rgb(146, 140, 140);
-  border-radius: 7px;
-  width: 500px;
-  height: 100px;
-  background-color: rgb(93, 182, 130);
-}
-.menu_modalDisplayBg > span {
-  position: absolute;
-  top: -3px;
-  right: 5px;
-  color: black;
-  font-size: 14pt;
-  cursor: pointer;
 }
 
 .computer__keyboard {
@@ -147,6 +127,7 @@
 }
 
 .keyboard__upPanel {
+  position: relative;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -161,11 +142,13 @@
 .keyboard__upPanel__leftPanel .mouseBtn {
   background-color: rgb(82, 82, 82);
   border: 1px solid rgb(146, 140, 140);
+  cursor: pointer;
   border-radius: 30px;
   width: 26px;
   height: 24px;
   margin-top: -3px;
   padding-top: 2px;
+  cursor: pointer;
 }
 .keyboard__upPanel__leftPanel .mouseBtn:hover {
   background-color: rgb(30, 192, 130);
@@ -174,9 +157,11 @@
 .keyboard__upPanel__leftPanel .soundBtn {
   background-color: rgb(82, 82, 82);
   border: 1px solid rgb(146, 140, 140);
+  cursor: pointer;
   margin-left: 25px;
   border-radius: 30px 0px 0px 30px;
   width: 50px;
+  cursor: pointer;
 }
 .keyboard__upPanel__leftPanel .soundBtn:hover {
   background-color: rgb(30, 192, 130);
@@ -185,8 +170,10 @@
 .keyboard__upPanel__leftPanel .homeBtn {
   background-color: rgb(82, 82, 82);
   border: 1px solid rgb(146, 140, 140);
+  cursor: pointer;
   margin-left: 2px;
   width: 50px;
+  cursor: pointer;
 }
 .keyboard__upPanel__leftPanel .homeBtn:hover {
   background-color: rgb(30, 192, 130);
@@ -198,9 +185,11 @@
   align-items: center;
   background-color: rgb(82, 82, 82);
   border: 1px solid rgb(146, 140, 140);
+  cursor: pointer;
   margin-left: 2px;
   border-radius: 0px 30px 30px 0px;
   width: 50px;
+  cursor: pointer;
 }
 .keyboard__upPanel__leftPanel .blockBtn:hover {
   background-color: rgb(30, 192, 130);
@@ -215,9 +204,11 @@
   align-items: center;
   background-color: rgb(82, 82, 82);
   border: 1px solid rgb(146, 140, 140);
+  cursor: pointer;
   margin-left: 25px;
   border-radius: 30px;
   width: 50px;
+  cursor: pointer;
 }
 .keyboard__upPanel__leftPanel .offBtn:hover {
   background-color: rgb(30, 192, 130);
@@ -240,6 +231,37 @@
 .keyboard__upPanel__rightPanel .emblem > p {
   margin-left: 5px;
   font-size: 18pt;
+}
+
+.upPanel_message {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: black;
+  text-align: center;
+  left: 288px;
+  width: 250px;
+  height: 33px;
+}
+
+.upPanel_message_layout {
+  background-color: rgb(93, 182, 130);
+  border: 1px solid rgb(146, 140, 140);
+  border-radius: 5px;
+  color: black;
+  text-align: center;
+  width: 30px;
+}
+
+.upPanel_message_message {
+  background-color: rgb(93, 182, 130);
+  border: 1px solid rgb(146, 140, 140);
+  border-radius: 5px;
+  color: black;
+  text-align: center;
+  margin-left: 10px;
+  width: 145px;
 }
 
 .keyboard__downContainer {
@@ -273,6 +295,7 @@
   align-items: space-around;
   background-color: rgb(82, 82, 82);
   border: 1px solid rgb(146, 140, 140);
+  cursor: pointer;
   border-radius: 3px;
   padding-left: 6px;
   width: 32px;
@@ -313,6 +336,7 @@
   flex-direction: row;
   background-color: rgb(82, 82, 82);
   border: 1px solid rgb(146, 140, 140);
+  cursor: pointer;
   border-radius: 3px;
   width: 33.5px;
   height: 33px;
@@ -406,6 +430,7 @@
   flex-direction: row;
   background-color: rgb(82, 82, 82);
   border: 1px solid rgb(146, 140, 140);
+  cursor: pointer;
   border-radius: 3px;
   width: 33.5px;
   height: 33px;
@@ -456,6 +481,7 @@
   flex-direction: row;
   background-color: rgb(82, 82, 82);
   border: 1px solid rgb(146, 140, 140);
+  cursor: pointer;
   border-radius: 3px;
   width: 33.5px;
   height: 33px;
@@ -521,6 +547,7 @@
   flex-direction: row;
   background-color: rgb(82, 82, 82);
   border: 1px solid rgb(146, 140, 140);
+  cursor: pointer;
   border-radius: 3px;
   width: 33.5px;
   height: 33px;
@@ -562,6 +589,11 @@
   display: inline;
 }
 
+.onShift {
+  background-color: rgb(30, 192, 130);
+  border: 2px inset;
+}
+
 .centralPanel__blockSpace {
   display: flex;
   flex-direction: row;
@@ -576,6 +608,7 @@
   flex-direction: row;
   background-color: rgb(82, 82, 82);
   border: 1px solid rgb(146, 140, 140);
+  cursor: pointer;
   border-radius: 3px;
   width: 33.5px;
   height: 33px;
@@ -634,12 +667,11 @@
 }
 
 .keyboard__downContainer__mousePanel {
-  margin-top: 20px;
   margin-right: -8px;
   display: flex;
   flex-direction: column;
   width: 150px;
-  height: 170px;
+  height: 220px;
 }
 
 .downContainer__mousePanel__board {
@@ -678,6 +710,16 @@
 .mousePanel__buttons__right:hover {
   background-color: rgb(30, 192, 130);
   border-color: rgb(30, 192, 130);
+}
+
+.downContainer__mousePanel__message {
+  background-color: rgb(93, 182, 130);
+  border: 1px solid rgb(146, 140, 140);
+  border-radius: 5px;
+  color: black;
+  text-align: center;
+  margin-top: 20px;
+  width: 145px;
 }
 
 .papers {
@@ -756,7 +798,7 @@ div[class^=note] .image_4 {
   grid-row: 2;
   position: relative;
   border-radius: 5px;
-  box-shadow: 0px 0px 15px 5px black;
+  box-shadow: 0px 0px 10px 3px black;
   top: 330px;
   left: 50px;
   width: 310px;
@@ -777,5 +819,42 @@ div[class^=note] .image_4 {
   text-align: justify;
   padding: 5px;
   list-style-type: square;
+  cursor: pointer;
+}
+.wrapper_menu > ul > li:hover {
+  box-shadow: 0 0 10px 3px black;
+  background-color: lightpink;
+}
+
+.menu_modalDisplayBg {
+  position: absolute;
+  top: 100px;
+  left: 270px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid rgb(146, 140, 140);
+  box-shadow: 0 0 10px 3px black;
+  border-radius: 7px;
+  width: 500px;
+  height: 100px;
+  background-color: rgb(93, 182, 130);
+}
+.menu_modalDisplayBg > span {
+  position: absolute;
+  top: -3px;
+  right: 5px;
+  color: black;
+  font-size: 14pt;
+  cursor: pointer;
+}
+
+.miniImage {
+  width: 104px;
+  height: 78px;
+  margin: 7px;
+  border: 2px solid rgb(146, 140, 140);
+  border-radius: 7px;
+  background-size: auto 78px;
   cursor: pointer;
 }/*# sourceMappingURL=style.css.map */
