--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -10,7 +10,7 @@
   font-size: 9pt;
 }
 
-.action {
+.hidden {
   visibility: hidden;
 }
 
@@ -58,6 +58,7 @@
 }
 
 .display_background {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -91,10 +92,9 @@
   & > button {
     border: 2px solid $colorGrey2;
     background-color: rgb(203, 228, 215);
-    font-weight: 500;
     border-radius: 7px;
     color: $colorBlack;
-    font-size: 12pt;
+    font-size: 10pt;
     width: 80px;
     height: 30px;
 
@@ -102,6 +102,12 @@
       box-shadow: 0 0 2px 2px $colorGrey2;
     }
   }
+}
+
+.clear {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
 }
 
 .displayImage_0 {
