A few more buttons activated

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,6 +16,16 @@
   border-color: rgb(30, 192, 130);
 }
 
+button:not([class~=onComputer]):hover {
+  background-color: rgb(82, 82, 82);
+  border-color: rgb(146, 140, 140);
+}
+
+button[class~=onComputer]:hover {
+  background-color: rgb(30, 192, 130);
+  border-color: rgb(30, 192, 130);
+}
+
 .suspense > h1 {
   color: black;
 }
@@ -52,6 +62,10 @@
   padding: 10px 10px 10px;
   width: 700px;
   height: 300px;
+}
+
+#display_lock {
+  background-color: #fff;
 }
 
 .display_background {
@@ -96,6 +110,11 @@
   box-shadow: 0 0 2px 2px rgb(146, 140, 140);
 }
 
+audio {
+  position: absolute;
+  top: 170px;
+}
+
 .clear {
   position: absolute;
   bottom: 10px;
@@ -116,6 +135,20 @@
 
 .displayImage_3 {
   background-image: url(../assets/display_background/more_kamni_tuman.jpg);
+}
+
+.display_lock {
+  background-image: url(../assets/lock.png);
+}
+
+.display_mouse {
+  background-image: url(../assets/crazy-mouse.gif);
+  position: absolute;
+  width: 120px;
+  height: 120px;
+  bottom: 2px;
+  left: 0px;
+  transition: left 10s cubic-bezier(0, 0, 1, 1);
 }
 
 .computer__keyboard {
@@ -156,10 +189,6 @@
   padding-top: 2px;
   cursor: pointer;
 }
-.keyboard__upPanel__leftPanel .mouseBtn:hover {
-  background-color: rgb(30, 192, 130);
-  border-color: rgb(30, 192, 130);
-}
 .keyboard__upPanel__leftPanel .soundBtn {
   background-color: rgb(82, 82, 82);
   border: 1px solid rgb(146, 140, 140);
@@ -169,10 +198,6 @@
   width: 50px;
   cursor: pointer;
 }
-.keyboard__upPanel__leftPanel .soundBtn:hover {
-  background-color: rgb(30, 192, 130);
-  border-color: rgb(30, 192, 130);
-}
 .keyboard__upPanel__leftPanel .homeBtn {
   background-color: rgb(82, 82, 82);
   border: 1px solid rgb(146, 140, 140);
@@ -180,10 +205,6 @@
   margin-left: 2px;
   width: 50px;
   cursor: pointer;
-}
-.keyboard__upPanel__leftPanel .homeBtn:hover {
-  background-color: rgb(30, 192, 130);
-  border-color: rgb(30, 192, 130);
 }
 .keyboard__upPanel__leftPanel .blockBtn {
   display: flex;
@@ -197,12 +218,11 @@
   width: 50px;
   cursor: pointer;
 }
-.keyboard__upPanel__leftPanel .blockBtn:hover {
-  background-color: rgb(30, 192, 130);
-  border-color: rgb(30, 192, 130);
-}
 .keyboard__upPanel__leftPanel .blockBtn > p {
   font-size: 5.5pt;
+}
+.keyboard__upPanel__leftPanel #onLock {
+  background-color: rgb(30, 192, 130);
 }
 .keyboard__upPanel__leftPanel .offBtn {
   display: flex;
@@ -216,12 +236,15 @@
   width: 50px;
   cursor: pointer;
 }
-.keyboard__upPanel__leftPanel .offBtn:hover {
-  background-color: rgb(30, 192, 130);
-  border-color: rgb(30, 192, 130);
-}
 .keyboard__upPanel__leftPanel .offBtn > p {
   font-size: 5.5pt;
+}
+
+#onComputer,
+#onLock,
+#onMusic,
+#onMouse {
+  background-color: rgb(30, 192, 130);
 }
 
 .keyboard__upPanel__rightPanel {
@@ -698,14 +721,14 @@
 .mousePanel__buttons__left {
   width: 74px;
   background-color: rgb(82, 82, 82);
-  border: 2px grey;
+  border: 2px rgb(146, 140, 140);
   border-style: solid solid inset solid;
   border-radius: 0px 0px 0px 30px;
 }
 
 .mousePanel__buttons__right {
   background-color: rgb(82, 82, 82);
-  border: 2px grey;
+  border: 2px rgb(146, 140, 140);
   border-style: solid inset inset solid;
   border-radius: 0px 0px 30px 0px;
   margin-left: 2px;
