--- a/src/css/style.css
+++ b/src/css/style.css
@@ -471,11 +471,16 @@ button[class~=onComputer]:hover {
   width: 516px;
   height: 25px;
 }
+.centralPanel__blockEsc > button[class~=buttonPressed] {
+  background-color: rgb(30, 192, 130);
+  border-color: rgb(30, 192, 130);
+}
 
 .blockEsc__btnClassF {
   display: flex;
   flex-direction: column;
-  align-items: space-around;
+  justify-content: center;
+  align-content: space-around;
   background-color: rgb(82, 82, 82);
   border: 1px solid rgb(146, 140, 140);
   cursor: pointer;
@@ -494,14 +499,15 @@ button[class~=onComputer]:hover {
   color: rgb(98, 190, 243);
 }
 .blockEsc__btnClassF:first-child {
-  padding-left: 1px;
+  padding-left: 5px;
   padding-top: 2px;
 }
-.blockEsc__btnClassF:nth-child(15), .blockEsc__btnClassF:nth-child(16) {
+.blockEsc__btnClassF:nth-child(14), .blockEsc__btnClassF:nth-child(15) {
   font-size: 9px;
   padding: 1px;
+  padding-left: 3px;
 }
-.blockEsc__btnClassF:nth-child(15) p, .blockEsc__btnClassF:nth-child(16) p {
+.blockEsc__btnClassF:nth-child(14) p, .blockEsc__btnClassF:nth-child(15) p {
   font-size: 7px;
 }
 
@@ -512,6 +518,10 @@ button[class~=onComputer]:hover {
   margin-top: 2px;
   width: 516px;
   height: 35px;
+}
+.centralPanel__blockNumbers > button[class~=buttonPressed] {
+  background-color: rgb(30, 192, 130);
+  border-color: rgb(30, 192, 130);
 }
 
 .blockNumbers__btnClassStd {
@@ -571,6 +581,10 @@ button[class~=onComputer]:hover {
   grid-column: 1;
   grid-row: 1;
 }
+.btnEnter div[class~=buttonPressed] {
+  background-color: rgb(30, 192, 130);
+  border-color: rgb(30, 192, 130);
+}
 .btnEnter .btnEnter__LD {
   grid-column: 1;
   grid-row: 2;
@@ -606,6 +620,10 @@ button[class~=onComputer]:hover {
   justify-content: space-between;
   grid-column: 1;
   grid-row: 1;
+}
+.centralPanel__blockTab > button[class~=buttonPressed] {
+  background-color: rgb(30, 192, 130);
+  border-color: rgb(30, 192, 130);
 }
 
 .blockTab__btnClassStd {
@@ -657,6 +675,10 @@ button[class~=onComputer]:hover {
   gap: 2px;
   grid-column: 1;
   grid-row: 2;
+}
+.centralPanel__blockCapsLock > button[class~=buttonPressed] {
+  background-color: rgb(30, 192, 130);
+  border-color: rgb(30, 192, 130);
 }
 .centralPanel__blockCapsLock .buttonOn {
   background-color: rgb(30, 192, 130);
@@ -728,6 +750,10 @@ button[class~=onComputer]:hover {
   width: 516px;
   height: 35px;
 }
+.centralPanel__blockShift > button[class~=buttonPressed] {
+  background-color: rgb(30, 192, 130);
+  border-color: rgb(30, 192, 130);
+}
 .centralPanel__blockShift .buttonOn {
   background-color: rgb(30, 192, 130);
   border: 2px inset;
@@ -787,6 +813,10 @@ button[class~=onComputer]:hover {
   margin-top: 2px;
   width: 516px;
   height: 35px;
+}
+.centralPanel__blockSpace > button[class~=buttonPressed] {
+  background-color: rgb(30, 192, 130);
+  border-color: rgb(30, 192, 130);
 }
 .centralPanel__blockSpace .buttonOn {
   background-color: rgb(30, 192, 130);
